# brzozowski-derivatives

./: .gitignore  LICENSE  README.md  brzozowski-derivatives.cabal
src/: Brzozowski.hs  RegexParser.hs
