name:                brzozowski-derivatives
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/meipp/brzozowski-derivatives#readme
license:             MIT
license-file:        LICENSE
author:              meipp
copyright:           2022 meipp
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Brzozowski, RegexParser
  build-depends:       base >= 4.7 && < 5,
                       parsec
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/meipp/brzozowski-derivatives
